--- a/src/section1.css
+++ b/src/section1.css
@@ -33,6 +33,7 @@
   border: 1px solid black;
   height: 250px;
   width: 250px;
+  margin-left: 40px;
 }
 #S4 {
   width: 100%;
@@ -42,4 +43,5 @@
   border: 1px solid black;
   height: 250px;
   width: 250px;
+  margin-left: 40px;
 }
