--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,6 +1,6 @@
 #NavigationCenter {
   width: 100%;
-  background-color: blue;
+  background-color: rgb(22, 167, 92);
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -17,7 +17,7 @@
   color: red;
   padding-right: 200px;
 }
-.Navigation {
+.Navigations {
   color: black;
   padding-left: 10px;
   padding-right: 10px;
