--- a/src/section1.css
+++ b/src/section1.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
 }*/
-#S1Title {
+/* #S1Title { 
   color: blue;
   display: flex;
   flex-direction: column;
@@ -44,4 +44,4 @@
   height: 250px;
   width: 250px;
   margin-left: 40px;
-}
+}*/
