--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -1,4 +1,4 @@
-#NavigationCenter {
+/* #NavigationCenter {
   width: 100%;
   background-color: rgb(22, 167, 92);
   display: flex;
@@ -21,4 +21,4 @@
   color: black;
   padding-left: 10px;
   padding-right: 10px;
-}
+} */
