--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
   font-family: "Lato", sans-serif;
   background-color: #091119;
-  color: rgb(255, 255, 255);
+  color: rgba(255, 255, 255, 0.7);
 }
