--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 body {
   font-family: "Lato", sans-serif;
-  background-color: #091119;
-  color: rgba(255, 255, 255, 0.8);
+  background-color: #0d243a;
+  color: rgba(255, 255, 255, 1);
+  font-weight: 500;
 }
+/* #091119 */
